update build.gradle to allow new java features, usage of guava
- h/t to Ryan, incl for the magic build.gradle clause, to use some new features in java 17, with java 21 syntax.  specifically, we will be using sealed classes and interfaces and the new pattern matching based switch statements.

- we will be using Google's guava libraries for java, for collections classes like BiMap.